--- a/quiz.html
+++ b/quiz.html
@@ -4,15 +4,18 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>Titel van de pagina</title>
+		<title>De groote kaas quiz</title>
   </head>
 
 	<body>
-        <h1>vraag</h1>
-        <button>antwoord 1</button>
-        <button>antwoord 2</button>
-        <button>antwoord 3</button>
-        <button>antwoord 4</button>
+        <h2 id = "vraag">vraag</h2>
+        <button id = "antwoord1">antwoord 1</button>
+        <button id = "antwoord2">antwoord 2</button>
+        <button id = "antwoord3">antwoord 3</button>
+        <button id = "antwoord4">antwoord 4</button>
+        <p id = "feedback"></p>
+        <p id = "score"></p>
+        <p id = "volgende">volgende vraag</p>
         <script src="quiz.js"></script>
 	</body>
 
