--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
         <button id = "antwoord4">antwoord 4</button>
         <p id = "feedback"></p>
         <p id = "score"></p>
-        <p id = "volgende">volgende vraag</p>
+        <button id = "volgende">volgende vraag</button>
         <script src="quiz.js"></script>
 	</body>
 
